clusters/apps/capacitor-ui/capacitor-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.capacitor.local.wololoaeyoyo.com`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
    - match: Host(`capacitor.local.wololoaeyoyo.com`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
  tls:
    secretName: local-wololoaeyoyo-com-tls
